# ISA

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  disassembler.cpp  disassembler.h  isa.cpp  isa.h  log.cpp  log.h  logmodel.cpp  logmodel.h  main.cpp  projecthandler.cpp  projecthandler.h  section.cpp  section.h  sectionhandler.cpp  sectionhandler.h
src/arch/: architecture.cpp  architecture.h  architecturex86.cpp  architecturex86.h  instructionsx86.cpp  instructionsx86.h
src/disasm/: instructioninfo.cpp  instructioninfo.h
src/files/: pefile.cpp  pefile.h
src/pe/: cofffile.cpp  cofffile.h  pefile.cpp  pefile.h  pesection.cpp  pesection.h
src/resources/: dark.qss  style.qrc
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/widgets/: logview.cpp  logview.h  peinfowidget.cpp  peinfowidget.h  peinfowidget.ui
